--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,13 +10,21 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@visx/group": "^3.3.0",
+    "@visx/mock-data": "^3.3.0",
+    "@visx/scale": "^3.5.0",
+    "@visx/shape": "^3.5.0",
     "axios": "^1.6.0",
     "bootstrap": "^5.3.2",
+    "chart.js": "^4.4.1",
     "formik": "^2.4.5",
     "ldrs": "^1.0.1",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
+    "react-minimal-pie-chart": "^8.4.0",
     "react-router-dom": "^6.18.0",
+    "recharts": "^2.10.3",
     "yup": "^1.3.2"
   },
   "devDependencies": {
